# arceos-bqs

./: .gitignore  Cargo.toml  kernel8.imgclear  netdump.pcap  search-index.js
api/arceos_api/: Cargo.toml
api/arceos_api/src/imp/: mem.rs
api/axfeat/: Cargo.toml
apps/boards/raspi4/: Cargo.toml
apps/boards/raspi4-usb/: Cargo.toml
apps/boards/raspi4/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: cmd.rs  main.rs
apps/fs/shell/src/: cmd.rs
apps/memtest/: Cargo.toml  expect_trace.out
apps/memtest/src/: main.rs
arceos_api/: all.html  index.html
arceos_api/display/: fn.ax_framebuffer_flush.html  fn.ax_framebuffer_info.html  index.html
arceos_api/fs/: fn.ax_create_dir.html  fn.ax_current_dir.html  fn.ax_file_attr.html  fn.ax_flush_file.html  fn.ax_open_dir.html  fn.ax_open_file.html  fn.ax_read_dir.html  fn.ax_read_file.html  fn.ax_read_file_at.html  fn.ax_remove_dir.html  fn.ax_remove_file.html  fn.ax_rename.html  fn.ax_seek_file.html  fn.ax_set_current_dir.html  fn.ax_truncate_file.html  fn.ax_write_file.html  fn.ax_write_file_at.html  index.html
arceos_api/io/: index.html
arceos_api/modules/: index.html
arceos_api/net/: fn.ax_dns_query.html  fn.ax_poll_interfaces.html  fn.ax_tcp_accept.html  fn.ax_tcp_bind.html  fn.ax_tcp_connect.html  fn.ax_tcp_listen.html  fn.ax_tcp_peer_addr.html  fn.ax_tcp_poll.html  fn.ax_tcp_recv.html  fn.ax_tcp_send.html  fn.ax_tcp_set_nonblocking.html  fn.ax_tcp_shutdown.html  fn.ax_tcp_socket.html  fn.ax_tcp_socket_addr.html  fn.ax_udp_bind.html  fn.ax_udp_connect.html  fn.ax_udp_peek_from.html  fn.ax_udp_peer_addr.html  fn.ax_udp_poll.html  fn.ax_udp_recv.html  fn.ax_udp_recv_from.html  fn.ax_udp_send.html  fn.ax_udp_send_to.html  fn.ax_udp_set_nonblocking.html  fn.ax_udp_socket.html  fn.ax_udp_socket_addr.html  index.html
arceos_api/stdio/: fn.ax_console_read_bytes.html  index.html
arceos_api/task/: fn.ax_current_task_id.html  fn.ax_exit.html  fn.ax_set_current_affinity.html  fn.ax_set_current_priority.html  fn.ax_sleep_until.html  fn.ax_spawn.html  fn.ax_wait_for_exit.html  fn.ax_wait_queue_wait.html  fn.ax_wait_queue_wait_until.html  fn.ax_wait_queue_wake.html  fn.ax_yield_now.html  index.html  struct.AxWaitQueueHandle.html  type.AxCpuMask.html
axhal/: all.html  index.html
axhal/arch/: fn.disable_irqs.html  fn.enable_irqs.html  fn.flush_tlb.html  fn.halt.html  fn.irqs_enabled.html  fn.read_page_table_root.html  fn.read_thread_pointer.html  fn.wait_for_irqs.html  fn.write_page_table_root.html  fn.write_thread_pointer.html
axhal/console/: fn.read_bytes.html  fn.write_bytes.html  index.html
axhal/misc/: fn.terminate.html  index.html
axhal/mp/: index.html
axnet/: fn.bench_receive.html  fn.bench_transmit.html  fn.poll_interfaces.html
axstd/io/: fn.stdin.html  fn.stdout.html  struct.Stdin.html  struct.StdinLock.html  struct.Stdout.html  struct.StdoutLock.html  trait.BufRead.html  trait.Read.html  trait.Write.html
axstd/io/prelude/: trait.BufRead.html  trait.Read.html  trait.Write.html
axtask/: all.html  fn.current.html  fn.current_may_uninit.html  fn.exit.html  fn.init_scheduler.html  fn.init_scheduler_secondary.html  fn.on_timer_tick.html  fn.run_idle.html  fn.set_current_affinity.html  fn.set_priority.html  fn.sleep.html  fn.sleep_until.html  fn.spawn.html  fn.spawn_raw.html  fn.spawn_task.html  fn.yield_now.html  index.html  struct.CurrentTask.html  struct.TaskId.html  struct.TaskInner.html  struct.WaitQueue.html  type.AxCpuMask.html  type.AxTaskRef.html
crates/brcm_pcie/: Cargo.toml
crates/brcm_pcie/src/: bcm2711.rs  lib.rs
crates/driver_common/src/: lib.rs
crates/driver_pci/: Cargo.toml
crates/driver_pci/src/: lib.rs
crates/driver_virtio/src/: xhci.rs
crates/driver_xhci/: Cargo.toml
crates/driver_xhci/src/: abstracted_data_struct.rs  lib.rs  register_operations_init_xhci.rs
crates/driver_xhci/src/vl805/: mod.rs
crates/mmemory/: Cargo.toml
crates/mmemory/src/: addr.rs  err.rs  lib.rs  paging.rs
crates/mmemory/src/allocator/: mod.rs  table.rs
crates/mmemory/src/arch/: aarch64.rs  mod.rs  riscv.rs  x86_64.rs
crates/mmemory/src/paging/: mod.rs
crates/os-dma/: Cargo.toml
crates/os-dma/src/: addr.rs  buffer.rs  lib.rs
crates/page_table/src/: bits64.rs
crates/page_table_entry/: Cargo.toml
examples/helloworld/: Cargo.toml
examples/helloworld/src/: main.rs
modules/axalloc/: Cargo.toml
modules/axalloc/src/: lib.rs  mem.rs  paging.rs
modules/axconfig/: defconfig.toml
modules/axdma/: Cargo.toml
modules/axdma/src/: allocator.rs  lib.rs
modules/axdriver/: Cargo.toml  build.rs
modules/axdriver/src/: drivers.rs  dummy.rs  e1000.rs  ixgbe.rs  lib.rs  macros.rs  prelude.rs
modules/axdriver/src/bus/: pci.rs
modules/axdriver/src/structs/: dyn.rs  mod.rs  static.rs
modules/axhal/: Cargo.toml
modules/axhal/src/: lib.rs  mem.rs
modules/axhal/src/platform/aarch64_common/: boot.rs
modules/axhal/src/platform/aarch64_raspi/: mod.rs
modules/axruntime/: Cargo.toml
modules/axruntime/src/: lib.rs  mp.rs
scripts/make/: qemu.mk
search.desc/arceos_api/: arceos_api-desc-0-.js
search.desc/axhal/: axhal-desc-0-.js
src/arceos_api/: lib.rs.html
src/arceos_api/imp/: mod.rs.html  task.rs.html
src/arceos_posix_api/imp/: stdio.rs.html
src/axhal/: lib.rs.html
src/axhal/arch/x86_64/: mod.rs.html
src/axhal/platform/x86_pc/: misc.rs.html  uart16550.rs.html
src/axnet/smoltcp_impl/: mod.rs.html
src/axstd/io/: stdio.rs.html
src/axstd/sync/: mutex.rs.html
src/axtask/: api.rs.html  lib.rs.html  run_queue.rs.html  task.rs.html  timers.rs.html  wait_queue.rs.html
type.impl/cpumask/: struct.CpuMask.js
ulib/axstd/: Cargo.toml
