[package]
name = "arceos-cli"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# use-ramfs = ["axstd/myfs", "dep:axfs_vfs", "dep:axfs_ramfs", "dep:crate_interface"]
default = []

[dependencies]
# axfs_vfs = { path = "../../../crates/axfs_vfs", optional = true }
# axfs_ramfs = { path = "../../../crates/axfs_ramfs", optional = true }
# crate_interface = { path = "../../../crates/crate_interface", optional = true }
# axstd = { path = "../../../ulib/axstd", features = ["alloc", "fs"], optional = true }

axstd = { path = "../../ulib/axstd", optional = true }
arm_pl011 = { version = "0.1.0", path = "../../crates/arm_pl011" }
driver_usb ={ path = "../../crates/driver_usb"}
brcm_pcie = {path = "../../crates/brcm_pcie"}