[package]
name = "mmemory"
version = "0.1.0"
edition = "2021"
authors = ["Zhou Rui<zrofu747@outlook.com>"]


[features]
default = ["tlsf"]
tlsf = ["allocator/tlsf"]
slab = ["allocator/slab"]
buddy = ["allocator/buddy"]


[dependencies]
memory_addr = { path = "../memory_addr" }
log = "0.4"
bitflags = "2"
page_table = { path = "../page_table" }
page_table_entry = { path = "../page_table_entry" }
allocator = { path = "../allocator", features = ["bitmap"] }
cfg-if = "1.0"
spinlock = { path = "../spinlock" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4"
tock-registers = "0"
