[package]
name = "axalloc"
version.workspace = true
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS global memory allocator"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axalloc"
documentation = "https://arceos-org.github.io/arceos/axalloc/index.html"

[features]
default = ["tlsf"]
tlsf = ["allocator/tlsf"]
slab = ["allocator/slab"]
buddy = ["allocator/buddy"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
kspin = "0.1"
memory_addr = "0.2"
axerrno = "0.1"
allocator = { git = "https://github.com/arceos-org/allocator.git", tag = "v0.1.0", features = [
    "bitmap",
] }
bitflags = "2.6"
page_table_entry = "0.1"
page_table_multiarch = { version = "0.2" }
os-dma = { workspace = true }
axconfig ={ workspace = true }
