[package]
name = "arceos-raspi4-usb"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../../../ulib/axstd", optional = true, features = ["net", "driver-vl805"]}

arm_pl011 = { version = "0.1.0", path = "../../../crates/arm_pl011" }